# Schotten-Totten

./: .gitignore  CMakeLists.txt  README.md  Schotten-Totten
src/: main.cpp
src/controllers/: gameManager.hpp
